Disable auto iframe height for landmark content

--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -764,7 +764,7 @@ a.close-btn span {
   overflow: hidden;
   display: block;
   width: 100% !important;
-  height: auto !important;
+  /*   height: auto !important; */
 }
 
 /* Promotion: Voting & Sharing */
