Remove footer for willamette flavor

--- a/src/flavors/willamette/static/css/custom.css
+++ b/src/flavors/willamette/static/css/custom.css
@@ -23,10 +23,7 @@
 -------------------------------------------------------------- */
 /* iphone 4 (320 x 480)*/
 
-@media only screen and (min-height: 440px) and (max-width: 60em) {
-  #map {
-    height: 292px;
-  }
+@media only screen and (max-width: 60em) {
   #site-title a:link,
   #site-title a:visited {
     width: 180px;
@@ -46,10 +43,7 @@
   }
 }
 
-@media only screen and (min-height: 480px) and (max-width: 60em) {
-  #map {
-    height: 332px;
-  }
+@media only screen and (max-width: 60em) {
   #site-title a:link,
   #site-title a:visited {
     width: 180px;
@@ -58,7 +52,6 @@
     margin: 10px 0 0 0;
   }
 }
-
 
 @media only screen and (min-width: 768px) {
   #place-form-type-choice a.button {
