--- a/src/sa_web/templates/base.html
+++ b/src/sa_web/templates/base.html
@@ -53,7 +53,7 @@
   <link rel="profile" href="//gmpg.org/xfn/11" />
 
   {% if config.map.cartodb_enabled %}
-  <link rel="stylesheet" href="https://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" />
+  <link rel="stylesheet" href="//cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/themes/css/cartodb.css" />
   {% else %}
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
   {% endif %}
@@ -204,7 +204,7 @@
   <script>window.jQuery || document.write('<script src="{{ STATIC_URL }}libs/jquery-1.10.2.js"><\/script>')</script><!-- FIXME: Maybe this should be pulled into the repo as a git submodule-->
 
   {% if config.map.cartodb_enabled %}
-  <script src="https://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script>
+  <script src="//cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/cartodb.js"></script>
   {% else %}
   <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
   {% endif %}
