--- a/src/flavors/duwamish-watershed/static/css/custom.css
+++ b/src/flavors/duwamish-watershed/static/css/custom.css
@@ -67,3 +67,8 @@
 
 @media only screen and (min-width: 1300px) {
 }
+
+#master-legend .shareabouts-layer-li {
+  font-size: 1.3em;
+  letter-spacing: -1.2px;
+}
