--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -283,23 +283,17 @@ select {
   margin: 0 0 1em;
 }
 
-/* Images */
-/* large checkbox graphic radio buttons */
+/* ##### Begin dynamic form styles ##### */
+
+/* Large radio and checkbox buttons styles */
 /* http://cssdeck.com/labs/ldmtsmfk */
-.big-btn:empty + label {
-  position: relative;
-  float: left;
-  line-height: 2.5em;
-  text-indent: 3.25em;
-  margin-top: 5px;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  color: #999999;
+.big-btn {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
 }
-.big-btn:empty + label:before {
+.big-btn + label:before {
   position: absolute;
   display: block;
   top: 0;
@@ -311,6 +305,17 @@ select {
   border-radius: 1px 0 0 1px;
 }
 .big-btn + label {
+  position: relative;
+  float: left;
+  line-height: 2.5em;
+  text-indent: 3.25em;
+  margin-top: 5px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  color: #999999;
   border-radius: 4px;
   padding-right: 10px;
   border: 2px solid #D1D3D4
@@ -334,36 +339,15 @@ select {
   font-weight: bold;
   border: 2px solid rgba(242, 82, 24, 0.89)
 }
-.big-btn {
-  /*display: none;*/
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  opacity: 0;
-}
-.radio_big_buttons,
-.checkbox_big_buttons {
-  position: relative;
-}
+
+/* Place type category button styles */
 #category-btns {
   margin-bottom: 20px;
 }
-.category-btn-input {
+.category-btn {
   display: none;
 }
-.category-btn-input:checked + label {
-  opacity: 1.0;
-}
-.category-btn-input:checked + label > span {
-  background-color: rgba(242, 82, 24, 0.89);
-  color: white;
-}
-.category-btn-input:checked + label > img {
-  border-left-color: rgb(242, 82, 24);
-  border-top-color: rgb(242, 82, 24);
-  border-bottom-color: rgb(242, 82, 24);
-}
-.category-btn-label {
+.category-btn + label {
   top: 0px;
   text-transform: uppercase;
   font-size: 12pt;
@@ -374,7 +358,7 @@ select {
   height: 46px;
   margin-bottom: 1px;
 }
-.category-btn-label > img {
+.category-btn + label > img {
   height: 36px;
   width: 30px;
   border-top: 2px solid transparent;
@@ -384,7 +368,7 @@ select {
   padding: 3px;
   display: inline;
 }
-.category-btn-label > span {
+.category-btn + label > span {
   width: 210px;
   position: absolute;
   top: 0px;
@@ -397,24 +381,34 @@ select {
   padding-top: 11px;
   padding-bottom: 11px;
 }
-.category-btn-label:hover {
+.category-btn:checked + label {
   opacity: 1.0;
-  cursor: pointer;
 }
-.category-btn-label:hover > span {
-  border-top-color: rgb(242, 82, 24);
-  border-right-color: rgb(242, 82, 24);
-  border-bottom-color: rgb(242, 82, 24);
-}
-.category-btn-label:hover > img {
+.category-btn:checked + label > img {
   border-left-color: rgb(242, 82, 24);
   border-top-color: rgb(242, 82, 24);
   border-bottom-color: rgb(242, 82, 24);
 }
-.form-annotation {
-  font-size: 0.8em;
-  font-style: italic;
+.category-btn:checked + label > span {
+  background-color: rgba(242, 82, 24, 0.89);
+  color: white;
 }
+.category-btn + label:hover {
+  opacity: 1.0;
+  cursor: pointer;
+}
+.category-btn + label:hover > img {
+  border-left-color: rgb(242, 82, 24);
+  border-top-color: rgb(242, 82, 24);
+  border-bottom-color: rgb(242, 82, 24);
+}
+.category-btn + label:hover > span {
+  border-top-color: rgb(242, 82, 24);
+  border-right-color: rgb(242, 82, 24);
+  border-bottom-color: rgb(242, 82, 24);
+}
+
+/* Selected category placeholder styles */
 #selected-category label {
   cursor: default !important;
 }
@@ -426,15 +420,17 @@ select {
 #selected-category-placeholder + label {
   opacity: 1.0;
 }
+#selected-category-placeholder + label > img {
+  opacity: 1.0;
+  border-color: rgba(242, 82, 24, 0.89);
+}
 #selected-category-placeholder + label > span {
   color: #FFF;
   background-color: rgb(242, 82, 24);
   border-color: rgb(242, 82, 24);
 }
-#selected-category-placeholder + label > img {
-  opacity: 1.0;
-  border-color: rgba(242, 82, 24, 0.89);
-}
+
+/* Other dynamic form styles */
 .category-menu-hamburger {
   width: 30px;
   height: 36px;
@@ -452,9 +448,15 @@ select {
   color: rgb(242, 82, 24);
   cursor: pointer;
 }
+.form-annotation {
+  font-size: 0.8em;
+  font-style: italic;
+}
 .alt-label {
   display: none;
 }
+/* ##### End dynamic form styles ##### */
+
 
 /* Imag es */
 img {
