--- a/src/sa_web/static/sass/default.sass
+++ b/src/sa_web/static/sass/default.sass
@@ -22,6 +22,17 @@ $opacity-med-black: rgba(0, 0, 0, 0.5)
 $opacity-med-high-white: rgba(255, 255, 255, 0.75)
 
 // Forms - Variables
+
+// Dynamic Form - Variables
+$icon-check-mark: '\2714'
+$icon-expansion-hamburger: '\f03a'
+$unselected-highlight-light-gray: #D1D3D4
+$unselected-message-light-gray: #999999
+$unselected-highlight-medium-gray: #444444
+$unselected-message-medium-gray: #EEEEEE
+$selected-highlight-orange: rgb(242, 82, 24)
+$selected-message-dark-gray: #222222
+
 // Images - Variables
 
 // ################################
@@ -397,6 +408,138 @@ select
 
 .form-field
   margin: 0 0 1em
+
+
+// ################################
+// DYNAMIC FORM - SELECTORS
+// ################################
+
+.big-btn
+  position: absolute
+  bottom: 0
+  left: 0
+  opacity: 0
+  + label
+    position: relative
+    float: left
+    line-height: 2.5em
+    text-indent: 3.25em
+    margin-top: 5px
+    cursor: pointer
+    -webkit-user-select: none
+    -moz-user-select: none
+    -ms-user-select: none
+    user-select: none
+    color: $unselected-message-light-gray
+    border-radius: 4px
+    padding-right: 10px
+    border: 2px solid $unselected-highlight-light-gray
+    &:before
+      position: absolute
+      display: block
+      top: 0
+      bottom: 0
+      left: 0
+      content: ''
+      width: 2.5em
+      background: $unselected-highlight-light-gray
+      border-radius: 1px 0 0 1px
+  &:hover:not(:checked)
+    + label
+      color: $unselected-highlight-medium-gray
+      &:before
+        content: $icon-check-mark
+        text-indent: .9em
+        color: $unselected-message-medium-gray
+  &:checked
+    + label
+      color: $selected-message-dark-gray
+      font-weight: bold
+      border: 2px solid $selected-highlight-orange
+      &:before
+        content: $icon-check-mark
+        text-indent: .9em
+        color: white
+        background-color: $selected-highlight-orange
+
+/* Place type category button styles */
+#category-btns
+  margin-bottom: 20px
+
+.category-btn
+  display: none
+  + label
+    top: 0px
+    text-transform: uppercase
+    font-size: 12pt
+    width: 200px
+    display: block
+    position: relative
+    opacity: 0.5
+    height: 46px
+    margin-bottom: 1px
+  + label > img
+    height: 36px
+    width: 30px
+    border-top: 2px solid transparent
+    border-bottom: 2px solid transparent
+    border-left: 2px solid transparent
+    border-radius: 4px 0 0 4px
+    padding: 3px
+    display: inline
+  + label > span
+    width: 210px
+    position: absolute
+    top: 0px
+    left: 38px
+    padding-left: 15px
+    border-top: 2px solid transparent
+    border-bottom: 2px solid transparent
+    border-right: 2px solid transparent
+    border-radius: 0 4px 4px 0
+    padding-top: 11px
+    padding-bottom: 11px
+  &:checked, &:hover
+    + label
+      opacity: 1.0
+      cursor: pointer
+      > img
+        border-color: $selected-highlight-orange
+      > span
+        background-color: $selected-highlight-orange
+        color: white
+
+/* Selected category placeholder styles */
+#selected-category
+  position: relative
+  width: 280px
+  margin-right: 0
+  label
+    cursor: default !important
+
+/* Other dynamic form styles */
+.category-menu-hamburger
+  width: 30px
+  height: 36px
+  margin-right: 10px
+  position: absolute
+  top: 5px
+  left: 290px
+  &:before
+    font-family: FontAwesome
+    font-size: 2.2em
+    content: $icon-expansion-hamburger
+  &:hover
+    color: $selected-highlight-orange
+    cursor: pointer
+
+.form-annotation
+  font-size: 0.8em
+  font-style: italic
+
+.alt-label
+  display: none
+
 
 // Images - Selectors
 
@@ -1121,7 +1264,7 @@ a.auth-inline
 //}
 
 // ################################
-// TICKER - SEELCTORS
+// TICKER - SELCTORS
 // ################################
 
 
@@ -1687,184 +1830,6 @@ a.close-unsupported-overlay
   text-align: center
   text-transform: uppercase
   box-shadow: -0.325em 0.325em 0 $opacity-very-low-black
-
-// ################################
-// DYNAMIC FORM
-// ################################
-
-/* ##### Begin dynamic form styles ##### */
-
-/* Large radio and checkbox buttons styles */
-/* http://cssdeck.com/labs/ldmtsmfk */
-.big-btn
-  position: absolute
-  bottom: 0
-  left: 0
-  opacity: 0
-
-.big-btn + label:before
-  position: absolute
-  display: block
-  top: 0
-  bottom: 0
-  left: 0
-  content: ''
-  width: 2.5em
-  background: #D1D3D4
-  border-radius: 1px 0 0 1px
-
-.big-btn + label
-  position: relative
-  float: left
-  line-height: 2.5em
-  text-indent: 3.25em
-  margin-top: 5px
-  cursor: pointer
-  -webkit-user-select: none
-  -moz-user-select: none
-  -ms-user-select: none
-  user-select: none
-  color: #999999
-  border-radius: 4px
-  padding-right: 10px
-  border: 2px solid #D1D3D4
-
-.big-btn:hover:not(:checked) + label:before
-  content: '\2714'
-  text-indent: .9em
-  color: #EEEEEE
-
-.big-btn:hover:not(:checked) + label
-  color: #444444
-
-.big-btn:checked + label:before
-  content: '\2714'
-  text-indent: .9em
-  color: #FFFFFF
-  background-color: rgba(242, 82, 24, 0.89)
-
-.big-btn:checked + label
-  color: #222222
-  font-weight: bold
-  border: 2px solid rgba(242, 82, 24, 0.89)
-
-
-/* Place type category button styles */
-#category-btns
-  margin-bottom: 20px
-
-.category-btn
-  display: none
-
-.category-btn + label
-  top: 0px
-  text-transform: uppercase
-  font-size: 12pt
-  width: 200px
-  display: block
-  position: relative
-  opacity: 0.5
-  height: 46px
-  margin-bottom: 1px
-
-.category-btn + label > img
-  height: 36px
-  width: 30px
-  border-top: 2px solid transparent
-  border-bottom: 2px solid transparent
-  border-left: 2px solid transparent
-  border-radius: 4px 0 0 4px
-  padding: 3px
-  display: inline
-
-.category-btn + label > span
-  width: 210px
-  position: absolute
-  top: 0px
-  left: 38px
-  padding-left: 15px
-  border-top: 2px solid transparent
-  border-bottom: 2px solid transparent
-  border-right: 2px solid transparent
-  border-radius: 0 4px 4px 0
-  padding-top: 11px
-  padding-bottom: 11px
-
-.category-btn:checked + label
-  opacity: 1.0
-
-.category-btn:checked + label > img
-  border-left-color: rgb(242, 82, 24)
-  border-top-color: rgb(242, 82, 24)
-  border-bottom-color: rgb(242, 82, 24)
-
-.category-btn:checked + label > span
-  background-color: rgba(242, 82, 24, 0.89)
-  color: white
-
-.category-btn + label:hover
-  opacity: 1.0
-  cursor: pointer
-
-.category-btn + label:hover > img
-  border-left-color: rgb(242, 82, 24)
-  border-top-color: rgb(242, 82, 24)
-  border-bottom-color: rgb(242, 82, 24)
-
-.category-btn + label:hover > span
-  border-top-color: rgb(242, 82, 24)
-  border-right-color: rgb(242, 82, 24)
-  border-bottom-color: rgb(242, 82, 24)
-
-/* Selected category placeholder styles */
-#selected-category label
-  cursor: default !important
-
-#selected-category
-  position: relative
-  width: 280px
-  margin-right: 0
-
-#selected-category-placeholder + label
-  opacity: 1.0
-
-#selected-category-placeholder + label > img
-  opacity: 1.0
-  border-color: rgba(242, 82, 24, 0.89)
-
-#selected-category-placeholder + label > span
-  color: #FFF
-  background-color: rgb(242, 82, 24)
-  border-color: rgb(242, 82, 24)
-
-/* Other dynamic form styles */
-.category-menu-hamburger
-  width: 30px
-  height: 36px
-  margin-right: 10px
-  position: absolute
-  top: 5px
-  left: 290px
-
-.category-menu-hamburger:before
-  font-family: FontAwesome
-  font-size: 2.2em
-  content: "\f03a"
-
-.category-menu-hamburger:hover
-  color: rgb(242, 82, 24)
-  cursor: pointer
-
-.form-annotation
-  font-size: 0.8em
-  font-style: italic
-
-.alt-label
-  display: none
-
-/* ##### End dynamic form styles ##### */
-
-
 
 
 // ################################
